--- a/Tests/FSharp/Tests.FSharp.fsproj
+++ b/Tests/FSharp/Tests.FSharp.fsproj
@@ -7,6 +7,7 @@
 		<NoWarn>$(NoWarn)</NoWarn>
 		<AssemblyName>linq2db.Tests.FSharp</AssemblyName>
 		<Configurations>Debug;Release</Configurations>
+    <OtherFlags>--deterministic-</OtherFlags>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -16,7 +17,7 @@
 		<DebugType>full</DebugType>
 		<Optimize>false</Optimize>
 	</PropertyGroup>
-
+  
 	<ItemGroup>
 		<Compile Include="AssemblyInfo.fs" />
 		<Compile Include="Models.fs" />
